--- a/SistemaCadeteria/Views/Home/Index.cshtml
+++ b/SistemaCadeteria/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Página Principal";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Holis ( ﾟ▽ﾟ)/</h1>
+    
 </div>
