--- a/SistemaCadeteria/Views/Pedido/Crear.cshtml
+++ b/SistemaCadeteria/Views/Pedido/Crear.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Crear Pedido";
 }
 
+<a asp-controller="Pedido" asp-action="Index" >Cancelar</a>
+
 @model SistemaCadeteria.ViewModels.CrearPedidoViewModel
 
 <section>
@@ -9,18 +11,23 @@
     <form method="post">
         <label asp-for="@Model.Nombre"></label>
         <input asp-for="@Model.Nombre">
+        <br>
 
         <label asp-for="@Model.Direccion"></label>
         <input asp-for="@Model.Direccion">
+        <br>
 
         <label asp-for="@Model.Telefono"></label>
         <input asp-for="@Model.Telefono">
+        <br>
 
         <label asp-for="@Model.DatosReferenciaDireccion"></label>
         <input asp-for="@Model.DatosReferenciaDireccion">
+        <br>
 
         <label asp-for="@Model.Observaciones"></label>
         <input asp-for="@Model.Observaciones">
+        <br>
 
         <button>Ingresar</button>
     </form>
