--- a/SistemaCadeteria/Views/Pedido/Editar.cshtml
+++ b/SistemaCadeteria/Views/Pedido/Editar.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Editar Pedido";
 }
 
+<a asp-controller="Pedido" asp-action="Index">Cancelar</a>
+
 @model SistemaCadeteria.ViewModels.EditarPedidoViewModel;
 
 <section>
@@ -12,21 +14,27 @@
         <label asp-for="@Model.Nombre">
             <input asp-for="@Model.Nombre" value="@Model.Nombre">
         </label>
+        <br>
+
         <label asp-for="@Model.Direccion">
             <input asp-for="@Model.Direccion" value="@Model.Direccion">
         </label>
+        <br>
 
         <label asp-for="@Model.Telefono">
             <input asp-for="@Model.Telefono" value="@Model.Telefono">
         </label>
+        <br>
 
         <label asp-for="@Model.DatosReferenciaDireccion">
             <input asp-for="@Model.DatosReferenciaDireccion" value="@Model.DatosReferenciaDireccion">
         </label>
+        <br>
 
         <label asp-for="@Model.Observaciones">
             <input asp-for="@Model.Observaciones" value="@Model.Observaciones">
         </label>
+        <br>
 
         <button>Editar</button>
     </form>
