Cambio en la clase estática

--- a/SistemaCadeteria/Views/Home/Index.cshtml
+++ b/SistemaCadeteria/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Página Principal";
 }
 
+@model SistemaCadeteria.Models.Cadeteria;
+
 <div class="text-center">
-    <h1 class="display-4">Holis ( ﾟ▽ﾟ)/</h1>
-    
+    <h2 class="display-4">Bienvenido a la página de @Model.NombreCadeteria ᕕ( ᐛ )ᕗ</h2>
 </div>
