--- a/SistemaCadeteria/Views/Shared/_Layout.cshtml
+++ b/SistemaCadeteria/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Index">Clientes</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cadete" asp-action="Index">Cadetes</a>
                         </li>
                         <li class="nav-item">
