View de Pedidos por Cliente

--- a/SistemaCadeteria/Views/Home/Index.cshtml
+++ b/SistemaCadeteria/Views/Home/Index.cshtml
@@ -7,3 +7,5 @@
 <div class="text-center">
     <h2 class="display-4">Bienvenido a la página de @Model.NombreCadeteria ᕕ( ᐛ )ᕗ</h2>
 </div>
+
+<a asp-controller="Home" asp-action="PedidosPorCliente">Listar pedidos por cliente</a>
