View de Pedidos por Cadete

--- a/SistemaCadeteria/Views/Home/Index.cshtml
+++ b/SistemaCadeteria/Views/Home/Index.cshtml
@@ -9,3 +9,7 @@
 </div>
 
 <a asp-controller="Home" asp-action="PedidosPorCliente">Listar pedidos por cliente</a>
+
+<br>
+
+<a asp-controller="Home" asp-action="PedidosPorCadete">Listar pedidos por cadete</a>
