--- a/SistemaCadeteria/Views/Home/Index.cshtml
+++ b/SistemaCadeteria/Views/Home/Index.cshtml
@@ -2,10 +2,9 @@
     ViewData["Title"] = "Página Principal";
 }
 
-@model SistemaCadeteria.Models.Cadeteria;
 
 <div class="text-center">
-    <h2 class="display-4">Bienvenido a la página de @Model.NombreCadeteria ᕕ( ᐛ )ᕗ</h2>
+    <h2 class="display-4">Bienvenido al Sistema de Gestión de Cadetería ᕕ( ᐛ )ᕗ</h2>
 </div>
 
 <a asp-controller="Home" asp-action="PedidosPorCliente">Listar pedidos por cliente</a>
