Arreglo de muestra de pedidos

--- a/SistemaCadeteria/Views/Pedido/Index.cshtml
+++ b/SistemaCadeteria/Views/Pedido/Index.cshtml
@@ -5,7 +5,7 @@
 @using SistemaCadeteria.ViewModels;
 @model List<PedidoViewModel>;
 
-<h1>Listado de pedidos</h1>
+<h1>Listado de pedidos no asignados</h1>
 
 @if ((Model.Count() < 20))
 {
