Control y cierre de sesión en todo el sitio

--- a/SistemaCadeteria/Views/Cadete/Editar.cshtml
+++ b/SistemaCadeteria/Views/Cadete/Editar.cshtml
@@ -26,3 +26,5 @@
         <button>Editar</button>
     </form>
 </section>
+<br>
+<a asp-controller="Home" asp-action="CerrarSesion">Cerrar sesion</a>
