--- a/SistemaCadeteria/Views/Pedido/Crear.cshtml
+++ b/SistemaCadeteria/Views/Pedido/Crear.cshtml
@@ -25,3 +25,5 @@
 @section Scripts {
 <partial name="_ValidationScriptsPartial" />
 }
+<br>
+<a asp-controller="Home" asp-action="CerrarSesion">Cerrar sesion</a>
