--- a/SistemaCadeteria/Views/Pedido/Editar.cshtml
+++ b/SistemaCadeteria/Views/Pedido/Editar.cshtml
@@ -19,3 +19,5 @@
         <button>Editar</button>
     </form>
 </section>
+<br>
+<a asp-controller="Home" asp-action="CerrarSesion">Cerrar sesion</a>
