--- a/SistemaCadeteria/Views/Cadete/Crear.cshtml
+++ b/SistemaCadeteria/Views/Cadete/Crear.cshtml
@@ -28,3 +28,5 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+<br>
+<a asp-controller="Home" asp-action="CerrarSesion">Cerrar sesion</a>
