Control de usuarios por rol

--- a/SistemaCadeteria/Views/Home/Index.cshtml
+++ b/SistemaCadeteria/Views/Home/Index.cshtml
@@ -21,4 +21,7 @@
 <a asp-controller="Home" asp-action="PedidosPorCadete">Listar pedidos por cadete</a>
 
 <br>
+<a asp-controller="Cadete" asp-action="CadeteNombre">Pedidos del cadete</a>
+
+<br>
 <a asp-controller="Home" asp-action="CerrarSesion">Cerrar sesion</a>
